--- a/alpha/alpha.css
+++ b/alpha/alpha.css
@@ -9,11 +9,16 @@
 
 a{
     color: #FFFFFF;
+    text-decoration: none;
+}
+
+a:hover{
+    font-weight: 500;
 }
 
 h1{
     font-size: 2rem;
-    font-weight: 900;
+    font-weight: 600;
     line-height: 2.5rem;
     padding-bottom: 0.5rem;
     text-align: center;
@@ -28,16 +33,29 @@ header{
 }
 
 img{
-    width: 100%;
+    display: block;
+    margin: 2rem auto;
+    width: 70%;
 }
 
-#main-list{
+.description-parent-container{
+    background-color: #D5CD61;
+    color: #004236;
+}
+
+.description-child-content{
+    padding-bottom: 1rem;
+    padding-top: 2rem;
+    width: 80%;
+}
+
+.main-list{
     padding-left: 0;
 }
 
-#main-list > li{
+.main-list > li{
     font-size: 1.2rem;
-    font-weight: 800;
+    font-weight: 600;
     list-style-type: none;
     margin-bottom: 1rem;
 }
@@ -49,20 +67,9 @@ img{
     line-height: 1.5rem;
 }
 
-.parent-container{
-    background-color: #D5CD61;
-    color: #004236;
-}
-
 .secondary-list > li{
-    font-weight: 800;
+    font-weight: 600;
     padding-bottom: 1rem;
-}
-
-.text-content{
-    padding-bottom: 1rem;
-    padding-top: 2rem;
-    width: 80%;
 }
 
 @media(min-width: 800px){
@@ -80,7 +87,7 @@ img{
         padding-top: 3rem;
     }
 
-    #main-list{
+    .main-list{
         display: grid;
         gap: 1rem;
         grid-template-columns: 50% 50%;
@@ -90,23 +97,23 @@ img{
         ;
     }
 
-    #feedback{
+    .feedback{
         grid-area: feedback;
     }
 
-    #loops-modes{
+    .loops-modes{
         grid-area: loops-modes;
     }
 
-    #rules{
+    .rules{
         grid-area: rules;
     }
 
-    #triggers{
+    .triggers{
         grid-area: triggers;
     }
 
-    #triggers, #loops-modes{
+    .triggers, .loops-modes{
         width: 100vw;
         max-width: 100%;
     }
