--- a/beta/beta.css
+++ b/beta/beta.css
@@ -23,7 +23,9 @@ h2{
 }
 
 img{
-    width: 100%;
+    display: block;
+    margin: 0 auto;
+    width: 75%;
 }
 
 #description{
@@ -56,7 +58,7 @@ img{
     img{
         display: block;
         margin: 0 auto;
-        width: 80%;
+        width: 50%;
     }
 }
 
@@ -64,7 +66,7 @@ img{
     img{
         display: block;
         margin: 0 auto;
-        width: 50%;
+        width: 25%;
     }
 
     #description{
